fixed alignment on footer / banner text

--- a/_sass/_banner.sass
+++ b/_sass/_banner.sass
@@ -2,7 +2,6 @@ header[role="banner"]
   order: 1
   margin-top: var(--buffer)
   div.wrap
-    margin-left: -3px
     div.text
       margin-top: var(--shim)
       h1, p
@@ -13,7 +12,7 @@ header[role="banner"]
           color: var(--color-half)
     div.icon
       position: relative
-      margin-left: -2px
+      margin-left: -3px
       div.shape
         display: flex
         flex-direction: column
