--- a/_sass/_footer.sass
+++ b/_sass/_footer.sass
@@ -1,10 +1,8 @@
 footer
   order: 2
-  margin-top: var(--shim)
+  margin-top: var(--nudge)
   ul
     display: flex
-    align-items: center
-    justify-content: flex-start
     gap: 0.8em
     list-style-type: none
     color: var(--color-half)
